gitops/prod/gateway/gateway/templates/gke-httproute.yaml
---
# Source: gateway/templates/gke-httproute.yaml
# API Routes
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: trip-manager-api-route
  namespace: trip-manager-prod
spec:
  parentRefs:
    - name: trip-manager-gateway
  hostnames:
    - api.neatnode.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/auth/
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: auth
          port: 8082
    - matches:
        - path:
            type: PathPrefix
            value: /api/users/
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: users
          port: 8083
    - matches:
        - path:
            type: PathPrefix
            value: /api/social/
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: social
          port: 8081
    - matches:
        - path:
            type: PathPrefix
            value: /api/trips/
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: trips
          port: 8084
    - matches:
        - path:
            type: PathPrefix
            value: /api/info/
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /info/
      backendRefs:
        - name: travel-info
          port: 8087
    - matches:
        - path:
            type: PathPrefix
            value: /api/feed/
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: feed
          port: 8089
    - matches:
        - path:
            type: PathPrefix
            value: /api/tenants/
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /tenants/
      backendRefs:
        - name: users
          port: 8083
    - matches:
        - path:
            type: PathPrefix
            value: /api/newsletter/
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: newsletter
          port: 8070
---
# Source: gateway/templates/gke-httproute.yaml
# Frontend Route
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: trip-manager-frontend-route
  namespace: trip-manager-prod
spec:
  parentRefs:
    - name: trip-manager-gateway
  hostnames:
    - neatnode.xyz
    - www.neatnode.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          port: 3000
